# morsels

./: .dockerignore  .gitignore  Dockerfile  README.md  atproto_oauth.py  config.py  docker-compose.yml  identity.py  justfile  main.py  pyproject.toml  schema.sql
.github/workflows/: build.yml
static/: input.css
templates/: _bite_list.html  _recent_bites.html  base.html  create.html  error.html  index.html  list.html  view.html
